namespace SistemaTutoria.Dominio;

public class Docente
{
    public int Id { get; set; }
    public string Nombre { get; set; } = "";
    public string Especialidad { get; set; } = "";
}